AC_INIT(CopyNES Library, 0.1, dave@linuxprogrammer.org, libcopynes)
AC_PREREQ(2.53)
AC_COPYRIGHT(GNU Library General Public License)
AC_REVISION($Revision$)
AC_CONFIG_SRCDIR(copynes.h)
AM_INIT_AUTOMAKE([$PACKAGE_TARNAME], [$PACKAGE_VERSION])
AC_PROG_CC
AM_PROG_LIBTOOL
AC_CONFIG_FILES(Makefile)
AC_OUTPUT

