AC_INIT([CopyNES Library], [0.3], [dave@linuxprogrammer.org])
AC_PREREQ(2.53)
AC_CONFIG_SRCDIR([src/copynes.c])
AC_COPYRIGHT(GNU Library General Public License)
AC_REVISION($Revision$)
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_PROG_LIBTOOL
AC_CONFIG_FILES([
    Makefile
    src/Makefile
])
AC_OUTPUT

